--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,940 +1,33 @@
-main
-    { 
-         background-image: url("../img/Fondo.png");
-         width: 100%;
-         height: 100%;
-        
-    }
+$imagen_de_fondo: url("../img/Fondo.png");
+$color_fondo_header: linear-gradient(rgba(71, 2, 2, 0.918) , rgb(31, 1, 21));
+$color_fondo_footer: rgb(15, 2, 2); 
 
+@import "./base/reset";
+@import "./layout/main_fondo";
+@import "./layout/header";
+@import "./layout/_main_index";
+@import "./layout/_footer";
+@import "./layout/_main_legales";
+@import "./layout/main_catalogo";
+@import "./layout/_media_laptop";
+@import "./layout/_media_tablet";
+@import "./layout/_media_celular";
 
-header 
 
-    { 
- 
-     
-     background: linear-gradient(rgba(71, 2, 2, 0.918) , rgb(31, 1, 21));
-     height: 260px;
-    
-    }
-
-
-h1 
-    { 
-    
-        font-size: 45px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-weight: bolder;
-        text-align: center;
-        padding: 5px;
-        color: bisque;
-        -webkit-animation: scale-up-hor-center 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-        animation: scale-up-hor-center 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;      
-    
-        @-webkit-keyframes scale-up-hor-center {
-            0% {
-              -webkit-transform: scaleX(0.4);
-                      transform: scaleX(0.4);
-            }
-            100% {
-              -webkit-transform: scaleX(1);
-                      transform: scaleX(1);
-            }
-          }
-          @keyframes scale-up-hor-center {
-            0% {
-              -webkit-transform: scaleX(0.4);
-                      transform: scaleX(0.4);
-            }
-            100% {
-              -webkit-transform: scaleX(1);
-                      transform: scaleX(1);
-            }
-          }
-    
-       &::first-letter
-       { 
-       font-size: 60px;
-       font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-       font-weight: 500;
-       }  
-    }
-
-      
-
-    h2 
-    { 
-    
-        font-size: 30px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-weight: bolder;
-        text-align: center;
-        /**padding: 5px;**/
-        color: bisque;
-    }
-
-    .legales 
-    { 
-        p 
-        { 
-        color: white;
-        font-size: 18px;
-        padding: 40px;
-        text-align: justify;
-        font-weight: bold;
-        }
-
-    }
-
-
-.contenedor
-    {
-        display: flex;
-        height: 40px;
-        width: 100%;
-        gap: 5px;
-        justify-content: center;
-        align-items:center;
-        flex-direction: row;
-        flex-wrap:wrap;
-       
-    }
- 
-.contenedor-inferior
-    {
-        display: flex;
-        height: 60px;
-        width: 100%;
-        gap: 5px;
-        justify-content: center;
-        align-items:center;
-        flex-direction: row;
-        flex-wrap:wrap;
-        margin-top: 5px;
-    }
-
-
-.box
-    {
-        width: 15%;
-        height: 40px;
-        text-align: center;
-        a
-    {
-        text-decoration: none;
-        font-size: 18px;
-        font-weight: bolder;
-        color: blanchedalmond;
-    }
-    
-    }
-
-.box-1
-    {
-        padding: 5px;
-    
-    }
-
-.box-2
-    {
-
-        padding: 5px;
-    }
-
-.box-3
-    {
-    
-        padding: 5px;
-    }
-
-.box-4
-    {
-    
-        padding: 5px;
-    }
-
-.box-5
-    {
-        padding: 5px;
-        
-    }
-
-.box-6
-    {
-    
-        padding: 5px;
-        
-    }
-
-.box-7
-    {
-    
-        padding: 5px;
-        
-    }
-.box-8
-    {
-        padding: 5px;
-        
-    }
-
-.logos
-    {
-        height: 24px;
-    }
-
-
-
-
-.contenedor-grid
-    {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: 1fr 1fr;
-        gap: 10px;
-        justify-items: center;
-        margin-top: 5px;
-        padding-top: 20px;
-        grid-template-areas: 
-        "grid-1 grid-2 grid-3"
-        "grid-4 grid-5 grid-6";
-  
-    
-}
-
-.grid-1
-    {
-        grid-area: grid-1;
-        
-        img
-    {
-        width: 400px;
-    
-    }
-    &:hover
-    {
-        transform: scale(1.2);
-        transition: transform 500ms;
-    
-    }
-        
-    }
-
-
-.grid-2
-    {
-        grid-area: grid-2;
-        
-        img
-    {
-        width: 400px;
-    
-    }
-    &:hover
-    {
-        transform: scale(1.2);
-        transition: transform 500ms;
-    
-    }
-        
-    }
-
-
-.grid-3
-    {
-        grid-area: grid-3;
-        
-        img
-    {
-        width: 400px;
-    
-    }
-    &:hover
-    {
-        transform: scale(1.2);
-        transition: transform 500ms;
-    
-    }
-        
-    }
-
-
-.grid-4
-    {
-        grid-area: grid-4;
-        padding-left: 20px;
-        padding-right: 20px;
-        font-size: 20px;
-        text-decoration: solid;
-        color: aliceblue;
-        text-align: justify;
-
-    }
-
-.grid-5
-    {
-        grid-area: grid-5;
-        padding-left: 20px;
-        padding-right: 20px;
-        font-size: 20px;
-        text-decoration: solid;
-        color: aliceblue;
-        text-align: justify;
-
-    }
-
-.grid-6
-    {
-        grid-area: grid-6;
-        padding-left: 20px;
-        padding-right: 20px;
-        font-size: 20px;
-        text-decoration: solid;
-        color: aliceblue;
-        text-align: justify;
-
-    }
-
-
-   
- .contenedor-flex
-    {
-        display: flex;
-        height: 50px;
-        width: 100%;
-        gap: 5px;
-        justify-content: center;
-        align-items: center;
-        flex-direction: row;
-        flex-wrap: wrap;
-        margin-top: 5px;
-        
-    }
-
-    footer 
-
-    { 
- 
-        background-color: rgba(71, 2, 2, 0.918) ;
-        height: 100px;
-    }
-
-
-    .caja
-    {
-        width: 20%;
-        height: 50px;
-        text-align: center;
-        padding-top: 15px;
-
-
-        a
-    {
-        text-decoration: none;
-        font-size: 18px;
-        font-weight: bolder;
-        color: blanchedalmond;
-           
-        
-    }
-    }
-
-
-    .contenedor-grid-catalogo
-    {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(3, 1fr);  
-        gap: 10px;
-        justify-items: center;
-        margin-top: 5px;
-        grid-template-areas: 
-        "grid-1-catalogo grid-2-catalogo grid-3-catalogo"
-        "grid-4-catalogo grid-5-catalogo grid-6-catalogo"
-        "grid-7-catalogo grid-8-catalogo grid-9-catalogo"
-        
-        ;
-
-    }
-
-
-
-    .grid-1-catalogo
-    {
-        
-        grid-area: grid-1-catalogo;
-
-    
-    img
-    {
-        
-        width: 180px;
-        justify-content: center;
-        align-items: center;
-    }
-    &:hover
-    {
-        transform: scale(1.2);
-        transition: transform 500ms;
-    }
-
-
-    }
-
-
-    .grid-2-catalogo
-    {
-        
-        grid-area: grid-2-catalogo;
-
-    
-    img
-    {
-        
-        width: 180px;
-        justify-content: center;
-        align-items: center;
-    }
-    &:hover
-    {
-        transform: scale(1.2);
-        transition: transform 500ms;
-    }
-
-
-    }
-
-
-    .grid-3-catalogo
-    {
-        
-        grid-area: grid-3-catalogo;
-
-    
-        img
-        {
-        
-        width: 180px;
-        justify-content: center;
-        align-items: center;
-        }
-        &:hover
-        {
-        transform: scale(1.2);
-        transition: transform 500ms;
-        }
-
-
-    }
-
-.grid-4-catalogo
-    {
-        
-        grid-area: grid-4-catalogo;
-
-    
-        img
-        {
-        
-        width: 180px;
-        justify-content: center;
-        align-items: center;
-        }
-        &:hover
-        {
-        transform: scale(1.2);
-        transition: transform 500ms;
-        }
-
-
-    }
-    .grid-5-catalogo
-    {
-        
-        grid-area: grid-5-catalogo;
-
-    
-    img
-    {
-        
-        width: 180px;
-        justify-content: center;
-        align-items: center;
-    }
-    &:hover
-    {
-        transform: scale(1.2);
-        transition: transform 500ms;
-    }
-
-
-    }
-
-    .grid-6-catalogo
-    {
-        
-        grid-area: grid-6-catalogo;
-
-    
-    img
-    {
-        
-        width: 180px;
-        justify-content: center;
-        align-items: center;
-    }
-    &:hover
-    {
-        transform: scale(1.2);
-        transition: transform 500ms;
-    }
 
 
-    }
 
 
-    .grid-7-catalogo
-    {
-        
-        grid-area: grid-7-catalogo;
 
-    
-    img
-    {
-        
-        width: 180px;
-        justify-content: center;
-        align-items: center;
-    }
-    &:hover
-    {
-        transform: scale(1.2);
-        transition: transform 500ms;
-    }
-
-
-    }
-
-    .grid-8-catalogo
-    {
-        
-        grid-area: grid-8-catalogo;
-
-    
-    img
-    {
-        
-        width: 180px;
-        justify-content: center;
-        align-items: center;
-    }
-    &:hover
-    {
-        transform: scale(1.2);
-        transition: transform 500ms;
-    }
-
-
-    }
-
-    .grid-9-catalogo
-    {
-        
-        grid-area: grid-9-catalogo;
-
-    
-    img
-    {
-        
-        width: 180px;
-        justify-content: center;
-        align-items: center;
-    }
-    &:hover
-    {
-        transform: scale(1.2);
-        transition: transform 500ms;
-    }
-
-
-    }
-
-    
-
-@media (max-width: 1024px)
-   
-
-{
-       
-    .contenedor-grid
-   
-    {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            grid-template-rows: 1fr 1fr;
-            gap: 10px;
-            justify-items: center;
-            margin-top: 5px;
-            padding-top: 20px;
-            grid-template-areas: 
-            "grid-1 grid-2 grid-3"
-            "grid-4 grid-5 grid-6";
-    
-    
-    }
-    
-    .grid-1
-    {
-        grid-area: grid-1;
-    
-        img
-    
-        {
-            width: 200px;
-        
-        } 
-    }
-    
-    
-    
-    .grid-2
-    {
-        grid-area: grid-2;
-
-        img
-    
-        {
-        width: 200px;
-    
-        }
-    }
-
-    
-    .grid-3
-    
-    {
-        grid-area: grid-3;
-
-    img
-    
-    {
-        width: 200px;
-    
-    }
-    }
-    
-        
-    .grid-4
-  
-    {
-        grid-area: grid-4;
-        padding-left: 20px;
-        padding-right: 20px;
-        font-size: 16px;
-        text-decoration: solid;
-        color: aliceblue;
-        text-align: justify;
-    
-    }
-    
-    .grid-5
-
-    {
-        grid-area: grid-5;
-        padding-left: 20px;
-        padding-right: 20px;
-        font-size: 16px;
-        text-decoration: solid;
-        color: aliceblue;
-        text-align: justify;
-    
-    }
-    
-    .grid-6
-    
-    {
-        grid-area: grid-6;
-        padding-left: 20px;
-        padding-right: 20px;
-        font-size: 16px;
-        text-decoration: solid;
-        color: aliceblue;
-        text-align: justify;
-    
-    }
-    
-    
-    
-}
-    
-
-
 
-@media (max-width: 768px)
-    
-{
-    
-    
-    header 
-
-    { 
- 
-     background-color: rgba(71, 2, 2, 0.918) ;
-     height: 260px;
-    
-    }
-    
-    h1 
-    { 
-    
-        font-size: 30px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-weight: bolder;
-        text-align: center;
-        padding: 5px;
-        color: bisque;
-        
-    }
-
-    h2 
-    { 
-    
-        font-size: 24px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-weight: bolder;
-        text-align: center;
-        padding: 5px;
-        color: bisque;
-    }
-
-    .box
-    {
-        width: 20%;
-        height: 20px;
-        text-align: center;
-    
-    }
-
-
-
-    .contenedor-grid
-    {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 1fr 1fr 1fr;
-        gap: 10px;
-        justify-items: center;
-        align-items: center;
-        margin-top: 5px;
-        grid-template-areas: 
-        "grid-1 grid-4"
-        "grid-2 grid-5"
-        "grid-3 grid-6"
-        ;
-    }
-
-    .grid-1 
-    {
-        img
-        {
-        width: 150px;
-        }
-    
-    }
-
-    .grid-2 img
-    {
-        img
-        {
-        width: 150px;
-        }
-    
-    
-    }
-
-    .grid-3 img
-    {
-        img
-        {
-        width: 150px;
-        }
-    
-    
-    }
-
-
-    .contenedor-grid-catalogo
-    {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(5, 1fr);
-        gap: 10px;
-        justify-items:auto;
-        margin-top: 5px;
-        grid-template-areas: 
-        "grid-1-catalogo grid-2-catalogo" 
-        "grid-3-catalogo grid-4-catalogo" 
-        "grid-5-catalogo grid-6-catalogo"
-        "grid-7-catalogo grid-8-catalogo"
-        "grid-9-catalogo ." 
-        
-        ;
-    }
 
 
 
 
-}
-
-@media (max-width: 576px)
-    
-{
-    
-    
-    header 
-
-    { 
- 
-     background-color: rgba(71, 2, 2, 0.918) ;
-     height: 260px;
-    
-    }
-    
-    h1 
-    { 
-    
-        font-size: 30px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-weight: bolder;
-        text-align: center;
-        padding: 5px;
-        color: bisque;
-        
-    }
-
-    h2 
-    { 
-    
-        font-size: 24px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-weight: bolder;
-        text-align: center;
-        padding: 5px;
-        color: bisque;
-    }
-
-    .box
-    {
-        width: 20%;
-        height: 20px;
-        text-align: center;
-        
-    
-    }
-
-
-
-    .contenedor-grid
-    {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(6, 1fr);
-        gap: 10px;
-        justify-items: center;
-        align-items: center;
-        margin-top: 5px;
-        grid-template-areas: 
-        "grid-1" 
-        "grid-4"
-        "grid-2"
-         "grid-5"
-        "grid-3" 
-        "grid-6"
-        ;
-    }
-
-.grid-1 img
-    {
-        
-        img
-        {
-        width: 200px;
-        }
-    
-    }
-
-.grid-2 img
-    {
-        img
-        {
-        width: 200px;
-        }
     
-    
-    }
 
-.grid-3 img
-    {
-        img
-        {
-        width: 200px;
-        }
     
     
-    }
-
-
-    .contenedor-grid-catalogo
-    {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(9, 1fr);
-        gap: 10px;
-        justify-items:auto;
-        margin-top: 5px;
-        grid-template-areas: 
-        "grid-1-catalogo" 
-        "grid-2-catalogo" 
-        "grid-3-catalogo" 
-        "grid-4-catalogo" 
-        "grid-5-catalogo"
-        "grid-6-catalogo"
-        "grid-7-catalogo"
-        "grid-8-catalogo"
-        "grid-9-catalogo " 
-        
-        ;
-    }
- 
-    .caja 
-    {
-    a
-        {
-        text-decoration: none;
-        font-size: 15px;
-        font-weight: bolder;
-        color: blanchedalmond;
-        }
-        
-        
-        
-    }
 
 
-    .contenedor-flex
-    {
-        display: flex;
-        height: 70px;
-        width: 100%;
-        gap: 15px;
-        justify-content: center;
-        align-items: center;
-        flex-direction: row;
-        flex-wrap: wrap;
-        margin-top: 5px;
-        
-    }
 
-
-    
-    
-}
