--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,15 @@ main {
 
 header {
   background: linear-gradient(rgba(71, 2, 2, 0.918), #1f0115);
-  height: 260px; }
+  height: 250px; }
 
 h1 {
-  font-size: 45px;
+  font-size: 40px;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: bolder;
   text-align: center;
-  padding: 5px;
+  padding: 10px;
+  margin-bottom: 5px;
   color: bisque;
   -webkit-animation: scale-up-hor-center 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
   animation: scale-up-hor-center 1s cubic-bezier(0.39, 0.575, 0.565, 1) both; }
@@ -47,7 +48,8 @@ h2 {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: bolder;
   text-align: center;
-  /**padding: 5px;**/
+  padding: 5px;
+  margin-bottom: 10px;
   color: bisque; }
 
 .contenedor {
@@ -81,29 +83,8 @@ h2 {
     font-weight: bolder;
     color: blanchedalmond; }
 
-.box-1 {
-  padding: 5px; }
-
-.box-2 {
-  padding: 5px; }
-
-.box-3 {
-  padding: 5px; }
-
-.box-4 {
-  padding: 5px; }
-
-.box-5 {
-  padding: 5px; }
-
-.box-6 {
-  padding: 5px; }
-
-.box-7 {
-  padding: 5px; }
-
-.box-8 {
-  padding: 5px; }
+.box-1, .box-2, .box-3, .box-4, .box-5, .box-6, .box-7, .box-8 {
+  padding: 10px; }
 
 .logos {
   height: 24px; }
@@ -118,31 +99,21 @@ h2 {
   padding-top: 20px;
   grid-template-areas: "grid-1 grid-2 grid-3" "grid-4 grid-5 grid-6"; }
 
-.grid-1 {
+.grid-1, .grid-2, .grid-3 {
   grid-area: grid-1; }
-  .grid-1 img {
+  .grid-1 img, .grid-2 img, .grid-3 img {
     width: 400px; }
-  .grid-1:hover {
+  .grid-1:hover, .grid-2:hover, .grid-3:hover {
     transform: scale(1.2);
     transition: transform 500ms; }
 
 .grid-2 {
   grid-area: grid-2; }
-  .grid-2 img {
-    width: 400px; }
-  .grid-2:hover {
-    transform: scale(1.2);
-    transition: transform 500ms; }
 
 .grid-3 {
   grid-area: grid-3; }
-  .grid-3 img {
-    width: 400px; }
-  .grid-3:hover {
-    transform: scale(1.2);
-    transition: transform 500ms; }
 
-.grid-4 {
+.grid-4, .grid-5, .grid-6 {
   grid-area: grid-4;
   padding-left: 20px;
   padding-right: 20px;
@@ -152,22 +123,10 @@ h2 {
   text-align: justify; }
 
 .grid-5 {
-  grid-area: grid-5;
-  padding-left: 20px;
-  padding-right: 20px;
-  font-size: 20px;
-  text-decoration: solid;
-  color: aliceblue;
-  text-align: justify; }
+  grid-area: grid-5; }
 
 .grid-6 {
-  grid-area: grid-6;
-  padding-left: 20px;
-  padding-right: 20px;
-  font-size: 20px;
-  text-decoration: solid;
-  color: aliceblue;
-  text-align: justify; }
+  grid-area: grid-6; }
 
 .contenedor-flex {
   display: flex;
@@ -211,95 +170,39 @@ footer {
   margin-top: 5px;
   grid-template-areas: "grid-1-catalogo grid-2-catalogo grid-3-catalogo" "grid-4-catalogo grid-5-catalogo grid-6-catalogo" "grid-7-catalogo grid-8-catalogo grid-9-catalogo"; }
 
-.grid-1-catalogo {
+.grid-1-catalogo, .grid-2-catalogo, .grid-3-catalogo, .grid-4-catalogo, .grid-5-catalogo, .grid-6-catalogo, .grid-7-catalogo, .grid-8-catalogo, .grid-9-catalogo {
   grid-area: grid-1-catalogo; }
-  .grid-1-catalogo img {
+  .grid-1-catalogo img, .grid-2-catalogo img, .grid-3-catalogo img, .grid-4-catalogo img, .grid-5-catalogo img, .grid-6-catalogo img, .grid-7-catalogo img, .grid-8-catalogo img, .grid-9-catalogo img {
     width: 180px;
     justify-content: center;
     align-items: center; }
-  .grid-1-catalogo:hover {
+  .grid-1-catalogo:hover, .grid-2-catalogo:hover, .grid-3-catalogo:hover, .grid-4-catalogo:hover, .grid-5-catalogo:hover, .grid-6-catalogo:hover, .grid-7-catalogo:hover, .grid-8-catalogo:hover, .grid-9-catalogo:hover {
     transform: scale(1.2);
     transition: transform 500ms; }
 
 .grid-2-catalogo {
   grid-area: grid-2-catalogo; }
-  .grid-2-catalogo img {
-    width: 180px;
-    justify-content: center;
-    align-items: center; }
-  .grid-2-catalogo:hover {
-    transform: scale(1.2);
-    transition: transform 500ms; }
 
 .grid-3-catalogo {
   grid-area: grid-3-catalogo; }
-  .grid-3-catalogo img {
-    width: 180px;
-    justify-content: center;
-    align-items: center; }
-  .grid-3-catalogo:hover {
-    transform: scale(1.2);
-    transition: transform 500ms; }
 
 .grid-4-catalogo {
   grid-area: grid-4-catalogo; }
-  .grid-4-catalogo img {
-    width: 180px;
-    justify-content: center;
-    align-items: center; }
-  .grid-4-catalogo:hover {
-    transform: scale(1.2);
-    transition: transform 500ms; }
 
 .grid-5-catalogo {
   grid-area: grid-5-catalogo; }
-  .grid-5-catalogo img {
-    width: 180px;
-    justify-content: center;
-    align-items: center; }
-  .grid-5-catalogo:hover {
-    transform: scale(1.2);
-    transition: transform 500ms; }
 
 .grid-6-catalogo {
   grid-area: grid-6-catalogo; }
-  .grid-6-catalogo img {
-    width: 180px;
-    justify-content: center;
-    align-items: center; }
-  .grid-6-catalogo:hover {
-    transform: scale(1.2);
-    transition: transform 500ms; }
 
 .grid-7-catalogo {
   grid-area: grid-7-catalogo; }
-  .grid-7-catalogo img {
-    width: 180px;
-    justify-content: center;
-    align-items: center; }
-  .grid-7-catalogo:hover {
-    transform: scale(1.2);
-    transition: transform 500ms; }
 
 .grid-8-catalogo {
   grid-area: grid-8-catalogo; }
-  .grid-8-catalogo img {
-    width: 180px;
-    justify-content: center;
-    align-items: center; }
-  .grid-8-catalogo:hover {
-    transform: scale(1.2);
-    transition: transform 500ms; }
 
 .grid-9-catalogo {
   grid-area: grid-9-catalogo; }
-  .grid-9-catalogo img {
-    width: 180px;
-    justify-content: center;
-    align-items: center; }
-  .grid-9-catalogo:hover {
-    transform: scale(1.2);
-    transition: transform 500ms; }
 
 @media (max-width: 1024px) {
   .contenedor-grid {
@@ -311,9 +214,9 @@ footer {
     margin-top: 5px;
     padding-top: 20px;
     grid-template-areas: "grid-1 grid-2 grid-3" "grid-4 grid-5 grid-6"; }
-  .grid-1 {
+  .grid-1, .grid-2, .grid-3 {
     grid-area: grid-1; }
-    .grid-1 img {
+    .grid-1 img, .grid-2 img, .grid-3 img {
       width: 200px; }
   .grid-2 {
     grid-area: grid-2; }
@@ -323,7 +226,7 @@ footer {
     grid-area: grid-3; }
     .grid-3 img {
       width: 200px; }
-  .grid-4 {
+  .grid-4, .grid-5, .grid-6 {
     grid-area: grid-4;
     padding-left: 20px;
     padding-right: 20px;
@@ -379,7 +282,7 @@ footer {
     align-items: center;
     margin-top: 5px;
     grid-template-areas: "grid-1 grid-4" "grid-2 grid-5" "grid-3 grid-6"; }
-  .grid-1 img {
+  .grid-1 img, .grid-2 img, .grid-3 img {
     width: 150px; }
   .grid-2 img img {
     width: 150px; }
@@ -425,7 +328,7 @@ footer {
     align-items: center;
     margin-top: 5px;
     grid-template-areas: "grid-1"  "grid-4" "grid-2" "grid-5" "grid-3"  "grid-6"; }
-  .grid-1 img {
+  .grid-1 img, .grid-2 img, .grid-3 img {
     width: 200px; }
   .grid-2 img {
     width: 200px; }
