--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,7 +4,7 @@ header
  
      
      background: $color_fondo_header; 
-     height: 260px;
+     height: 250px;
     
     }
 
@@ -12,11 +12,12 @@ header
 h1 
     { 
     
-        font-size: 45px;
+        font-size: 40px;
         font-family: Georgia, 'Times New Roman', Times, serif;
         font-weight: bolder;
         text-align: center;
-        padding: 5px;
+        padding: 10px;
+        margin-bottom: 5px;
         color: bisque;
         -webkit-animation: scale-up-hor-center 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
         animation: scale-up-hor-center 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;      
@@ -59,7 +60,8 @@ h1
         font-family: Georgia, 'Times New Roman', Times, serif;
         font-weight: bolder;
         text-align: center;
-        /**padding: 5px;**/
+        padding: 5px;
+        margin-bottom: 10px;
         color: bisque;
     }
 
@@ -113,50 +115,49 @@ h1
 
 .box-1
     {
-        padding: 5px;
+        padding: 10px;
     
     }
 
 .box-2
     {
-
-        padding: 5px;
+        @extend .box-1
     }
 
 .box-3
     {
     
-        padding: 5px;
+        @extend .box-1;
     }
 
 .box-4
     {
     
-        padding: 5px;
+        @extend .box-1;
     }
 
 .box-5
     {
-        padding: 5px;
+        @extend .box-1;
         
     }
 
 .box-6
     {
     
-        padding: 5px;
+        @extend .box-1;
         
     }
 
 .box-7
     {
     
-        padding: 5px;
+        @extend .box-1;
         
     }
 .box-8
     {
-        padding: 5px;
+        @extend .box-1;
         
     }
 
