--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,9 +5,7 @@
      height: 50px;
      width: 100%;
      gap: 5px;
-     justify-content: center;
-     align-items: center;
-     flex-direction: row;
+     @include centrar(center,center,row);
      flex-wrap: wrap;
      margin-top: 5px;
      
