--- a/scss/layout/_main_catalogo.scss
+++ b/scss/layout/_main_catalogo.scss
@@ -6,6 +6,7 @@
         gap: 10px;
         justify-items: center;
         margin-top: 5px;
+        padding-top: 40px;
         grid-template-areas: 
         "grid-1-catalogo grid-2-catalogo grid-3-catalogo"
         "grid-4-catalogo grid-5-catalogo grid-6-catalogo"
