--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,8 @@ $color_fondo_footer: rgb(15, 2, 2);
 @import "./layout/_footer";
 @import "./layout/_main_legales";
 @import "./layout/main_catalogo";
+@import "./layout/main_contacto";
+@import "./layout/main_nosotros";
 @import "./layout/_media_laptop";
 @import "./layout/_media_tablet";
 @import "./layout/_media_celular";
