--- a/scss/layout/_main_fondo.scss
+++ b/scss/layout/_main_fondo.scss
@@ -3,5 +3,9 @@ main
          background-image: $imagen_de_fondo;
          width: 100%;
          height: 100%;
+         filter: brightness(100%);
+         opacity: 100%;
+     
+         ;
         
     }
