--- a/scss/layout/_media_laptop.scss
+++ b/scss/layout/_media_laptop.scss
@@ -9,14 +9,16 @@
     {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            grid-template-rows: 1fr 1fr;
+            grid-template-rows: auto auto auto;
             gap: 10px;
             justify-items: center;
             margin-top: 5px;
             padding-top: 20px;
             grid-template-areas: 
             "grid-1 grid-2 grid-3"
-            "grid-4 grid-5 grid-6";
+            "grid-4 grid-5 grid-6"
+            "grid-7 grid-8 grid-9"
+            ;
     
     
     }
