--- a/scss/layout/_media_tablet.scss
+++ b/scss/layout/_media_tablet.scss
@@ -48,16 +48,16 @@
     .contenedor-grid
     {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 30% 30% 40%;
         grid-template-rows: 1fr 1fr 1fr;
         gap: 10px;
         justify-items: center;
         align-items: center;
         margin-top: 5px;
         grid-template-areas: 
-        "grid-1 grid-4"
-        "grid-2 grid-5"
-        "grid-3 grid-6"
+        "grid-1 grid-4 grid-7"
+        "grid-2 grid-5 grid-8"
+        "grid-3 grid-6 grid-9"
         ;
     }
 
