--- a/scss/layout/_main_contacto.scss
+++ b/scss/layout/_main_contacto.scss
@@ -1,4 +1,92 @@
 main
 { 
 margin-top: 5px;
+
+
 }   
+
+
+
+.content{
+    max-width: 800px;
+    margin-left:auto;
+    margin-right:auto;
+    padding:0.8cm;
+}
+.logo{
+    color:rgb(70, 5, 5);
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+}
+.contact-wrapper>*{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding:0.5cm;
+    color:white;
+    font-size:10px;
+}
+
+.contact-form form input{
+    width:100%;
+    padding: .2cm;
+    border-color: black;
+    border-width: 1px;
+    border-style: solid;
+    background: white;
+    border-radius:8px;
+}
+.contact-info form button,
+.contact-info form input{
+    width:100%;
+    padding: .2cm;
+    border-color: black;
+    border-width: 1px;
+    border-style: solid;
+    background: white;
+    border-radius: 8px;
+}
+.contact-info form button{
+    background: #920b9e;
+    border-style:white;
+    color:white;
+    height:30px;
+    width: 250px; 
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+.contact-info form button:hover{
+    background:#2e031d;
+}
+@media(min-width: 700px){
+    body{      
+    width: 100%;
+    background-size: 100% 115%;
+    }
+    .logo{
+        padding:0.6cm;
+        text-align: center;
+        font-size: 20px;
+    }
+    .contact-wrapper>*{
+        padding:1.5cm;
+    }
+    .contact-wrapper{
+        font-family: 'Roboto';
+        font-size:10px;
+        display:grid;
+        /*grid-template-columns: 1fr 1fr;*/
+        grid-template-columns: repeat(2, 1fr);
+        justify-items:stretch;
+        justify-items: start;
+        justify-items: end;
+
+    }
+    .contact-info form button{
+        height:35px;
+        width: 220px; 
+        margin-left: 50%;
+        transform: translateX(-50%);
+        border-color: white;
+        border-width: 1px;
+        border-style: solid;
+    }
+}
